fix: overflowing page

--- a/style.css
+++ b/style.css
@@ -358,6 +358,7 @@ header {
   text-align: center;
   color: var(--Dark-Blue);
   margin-bottom: 4.8rem;
+  width: 333.93px;
 }
 
 .investment-opportunities p > span {
